# comfy-mcp

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  sync-templates.yml
.template_cache/: README.md
comfy_mcp/: __init__.py
comfy_mcp/dsl/: __init__.py  api.py  ast_nodes.py  converter.py  grammar.lark  parser.py
comfy_mcp/mcp/: __init__.py  server.py
comfy_mcp/templates/: __init__.py  manager.py  official.py  sync_config.py  templates.py
docs/: Makefile  conf.py  index.rst
scripts/: sync_templates.py
tests/: conftest.py
tests/integration/: test_mcp_official_tools.py  test_mcp_tools.py  test_official_integration.py
tests/unit/: test_converters.py  test_dsl_parser.py  test_official_templates.py  test_templates.py
